--- a/Wordle/Espec5/Espec5.css
+++ b/Wordle/Espec5/Espec5.css
@@ -1,15 +1,62 @@
-table{
-    margin: auto;
-    padding-bottom: 70px;
+*{
+  margin: 0;
+  padding: 0;
 }
-input{
-    height: 62px;
-    width: 62px;
-    border-radius: 10px;
-    border-color: rgb(224, 224, 224);
+html, body{
+  background-color: black;
+  height: 100%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+   'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-input:focus{
-    display: none;
+#container{
+  display: flex;
+  
+  height: 100%;
+  align-items: center;
+  flex-direction: column;
+}
+header{
+  border-bottom: 1px solid beige;
+}
+.title{
+  color:beige;
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0.4rem 0 0.4rem 0;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+  'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#board-container{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  overflow: hidden;
+}
+
+#board{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+
+}
+
+.square{
+  border: 2px solid beige;
+  min-width: 60px;
+  min-height: 60px;
+  font-size: 2.5rem;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+  color:beige;
+ 
 }
 
 #keyboard-cont {
@@ -29,6 +76,7 @@ input:focus{
     margin: 5px ;
     text-transform: uppercase;
     border: none;
-    background-color: rgb(226,232,240);
+    background-color:gray;
     border-radius: 5px;
+    color: beige;
   }
