--- a/Wordle/Espec5/Espec5.css
+++ b/Wordle/Espec5/Espec5.css
@@ -8,7 +8,7 @@ html, body{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-#container{
+#general{
   display: flex;
   
   height: 100%;
@@ -18,7 +18,7 @@ html, body{
 header{
   border-bottom: 1px solid beige;
 }
-.title{
+.titol{
   color:beige;
   font-size: 2.5rem;
   font-weight: bold;
@@ -27,7 +27,7 @@ header{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
   'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-#board-container{
+#paraules-general{
   margin-top: 20px;
   display: flex;
   justify-content: center;
@@ -36,7 +36,7 @@ header{
   overflow: hidden;
 }
 
-#board{
+#paraules{
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-gap: 5px;
@@ -45,7 +45,7 @@ header{
 
 }
 
-.square{
+.quadrat{
   border: 2px solid beige;
   min-width: 60px;
   min-height: 60px;
@@ -59,24 +59,24 @@ header{
  
 }
 
-#keyboard-cont {
-    margin: 50px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+#teclat {
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   
-  #keyboard-cont div {
-    display: flex;
-  }
-  .keyboard-button {
-    font-size: 1rem;
-    font-weight: 700;
-    padding: 15px;
-    margin: 5px ;
-    text-transform: uppercase;
-    border: none;
-    background-color:gray;
-    border-radius: 5px;
-    color: beige;
-  }
+#teclat div {
+  display: flex;
+}
+.boto-teclat {
+  font-size: 1rem;
+  font-weight: 700;
+  padding: 15px;
+  margin: 5px ;
+  text-transform: uppercase;
+  border: none;
+  background-color:gray;
+  border-radius: 5px;
+  color: beige;
+}
