--- a/Wordle/style.css
+++ b/Wordle/style.css
@@ -5,6 +5,7 @@
 }
 
 #left img {
+    padding-left: 50px;
     width: 300px;
     height: 300px;
     padding-top: 300px;
@@ -17,21 +18,16 @@
 }
 
 #right img {
+    padding-left: 50px;
     width: 300px;
     height: 300px;
     padding-top: 300px;
 }
-body {
+#body1 {
     background-color: black;
     font-size: 1.3rem;
 }
 
-div {
-    text-align: center;
-    width: 48%;
-    margin: 0 auto;
-    color: beige;
-}
 #h1 {
     width: 905.75px;
     height: 90px;
@@ -55,6 +51,10 @@ hr {
     width: 100%;
 }
 #tot {
+    text-align: center;
+    width: 48%;
+    margin: 0 auto;
+    color: beige;
     float: left;
     width: 930px;
 }
@@ -108,7 +108,7 @@ ul {
     font-size: 1.3rem;
 }
 
-a {
+.link {
     color: green;
 }
 .dGroc{
@@ -150,4 +150,86 @@ a {
     margin: 2px;
     font-size: 1.3rem;
     font-weight: bold;
+}
+*{
+    margin: 0;
+    padding: 0;
+  }
+#htmlGame, #bodyGame{
+background-color: black;
+height: 100%;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#general{
+display: flex;
+
+height: 100%;
+align-items: center;
+flex-direction: column;
+}
+#headerGame{
+border-bottom: 1px solid beige;
+}
+.titol{
+color:beige;
+font-size: 2.5rem;
+font-weight: bold;
+margin: 0.4rem 0 0.4rem 0;
+text-align: center;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+#paraules-general{
+margin-top: 20px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-grow: 1;
+overflow: hidden;
+}
+
+#paraules{
+display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-gap: 5px;
+padding: 10px;
+box-sizing: border-box;
+
+}
+
+.quadrat{
+border: 2px solid beige;
+min-width: 60px;
+min-height: 60px;
+font-size: 2.5rem;
+border-radius: 4px;
+display: flex;
+justify-content: center;
+align-items: center;
+text-transform: uppercase;
+color:beige;
+
+}
+
+#teclat {
+margin: 50px 0;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+#teclat div {
+display: flex;
+}
+.boto-teclat {
+font-size: 1rem;
+font-weight: 700;
+padding: 15px;
+margin: 5px ;
+text-transform: uppercase;
+border: none;
+background-color:gray;
+border-radius: 5px;
+color: beige;
 }
