--- a/Wordle/style.css
+++ b/Wordle/style.css
@@ -192,47 +192,39 @@ form label {
 }
 
 /*Session destroy*/
-.cancelbtn, .deletebtn {
-  float: left;
-  width: 50%;
+#dialog{
+  top: 300px;
+  padding: 20px;
+  background-color: white;
+  border: solid 10px #f1c40f;
+  margin-left: 626px;
 }
-
-.cancelbtn {
-  background-color: #ccc;
-  color: black;
+#dialog p{
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  margin-bottom:20px;
 }
-
-.deletebtn {
-  background-color: #f44336;
-}
-.container {
-  padding: 16px;
+#noButton{
+  background-color:grey;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  color: #ffffff;
   text-align: center;
+  margin-bottom: 10px;
+
 }
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 0; 
-  left: 40%;
-  top: 30%;
-  width: 20%;
-  height: 20%; 
-  color: black;
-  margin-bottom: 30px;
-}
-.modal-content {
-  padding-top: 50px;
+#siButton{
   background-color: #f1c40f;
-
-  width: 100%; 
-  height: 100%;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 10px;
 }
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
 /*--------------GAME.PHP--------------*/
 #htmlGame,
 #bodyGame {
@@ -358,14 +350,13 @@ form label {
   animation: typing 2s steps(11), blink .5s infinite step-end alternate;
   overflow: hidden;
   }
+  @keyframes typing {
+    from { width: 0};
+  }
 
-@keyframes typing {
-  from { width: 0};
-}
-
-@keyframes blink {
-  50% { border-color: transparent};
-}
+  @keyframes blink {
+    50% { border-color: transparent};
+  }
 
 @media only screen and (max-width: 800px) {
   #tot {
@@ -517,45 +508,41 @@ form label {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   /*Session destroy*/
-  .cancelbtn, .deletebtn {
-    float: left;
-    width: 50%;
+  #dialog{
+    top: 170px;
+    padding: 10px;
+    background-color: white;
+    border: solid 5px #f1c40f;
+    margin-left: 220px;
   }
-
-  .cancelbtn {
-    background-color: #ccc;
-    color: black;
+  #dialog p{
+    font-size: smaller;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-bottom:20px;
   }
-
-  .deletebtn {
-    background-color: #f44336;
-  }
-  .container {
-    padding: 16px;
+  #noButton{
+    font-size: small;
+    background-color:grey;
+    width: 50px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    color: #ffffff;
     text-align: center;
-  }
-  .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 0; 
-    left: 40%;
-    top: 30%;
-    width: 20%;
-    height: 20%; 
-    color: black;
-    margin-bottom: 30px;
-  }
-  .modal-content {
-    padding-top: 50px;
-    background-color: #f1c40f;
+    margin-bottom: 10px;
 
-    width: 100%; 
-    height: 100%;
   }
-  .clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
+  #siButton{
+    font-size: small;
+    background-color: #f1c40f;
+    width: 50px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 10px;
   }
   /*--------------GAME.PHP--------------*/
 #htmlGame,
@@ -679,14 +666,13 @@ form label {
   animation: typing 2s steps(11), blink .5s infinite step-end alternate;
   overflow: hidden;
   }
+  @keyframes typing {
+    from { width: 0};
+  }
 
-@keyframes typing {
-  from { width: 0};
-}
-
-@keyframes blink {
-  50% { border-color: transparent};
-}
+  @keyframes blink {
+    50% { border-color: transparent};
+  }
 }
 @media only screen and (max-width: 375px) {
   #tot {
@@ -846,6 +832,42 @@ form label {
     color: beige;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  /*Session destroy*/
+  #dialog{
+    top: 300px;
+    padding: 5px;
+    background-color: white;
+    border: solid 4px #f1c40f;
+    margin-left: 50px;
+  }
+  #dialog p{
+    font-size: xx-small;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-bottom:10px;
+  }
+  #noButton{
+    font-size: xx-small;
+    background-color:grey;
+    width: 40px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+  #siButton{
+    font-size: xx-small;
+    background-color: #f1c40f;
+    width: 40px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 5px;
   }
   /*--------------GAME.PHP--------------*/
   #htmlGame,
